2014-07-10  Holger Seelig  <holger.seelig@yahoo.de>

	* TwoSidedMaterial.wrl: 

2014-07-06  Holger Seelig  <holger.seelig@yahoo.de>

	* TextureCoordinateGenerator.wrl: 

2014-06-30  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* pb.x3dv:
	* QuadSphere.x3dv: 

2014-06-22  Holger Seelig  <holger.seelig@yahoo.de>

	* pb.x3dv: 

2014-06-21  Holger Seelig  <holger.seelig@yahoo.de>

	* pb.x3dv: 

2014-06-21  Holger Seelig  <holger.seelig@yahoo.de>

	* pb.x3dv: 

2014-06-20  Holger Seelig  <holger.seelig@yahoo.de>

	* pb.x3dv: 

2014-06-20  Holger Seelig  <holger.seelig@yahoo.de>

	* pb.x3dv: 

2014-06-20  Holger Seelig  <holger.seelig@yahoo.de>

	* pb.x3dv: 

2014-06-20  Holger Seelig  <holger.seelig@yahoo.de>

	* pb.x3dv: 

2014-06-19  Holger Seelig  <holger.seelig@yahoo.de>

	* pb.x3dv: 

2014-06-19  Holger Seelig  <holger.seelig@yahoo.de>

	* pb.x3dv: 

2014-06-19  Holger Seelig  <holger.seelig@yahoo.de>

	* pb.x3dv: 

2014-06-19  Holger Seelig  <holger.seelig@yahoo.de>

	* pb.x3dv: 

2014-06-19  Holger Seelig  <holger.seelig@yahoo.de>

	* pb.x3dv: 

2014-06-18  Holger Seelig  <holger.seelig@yahoo.de>

	* pb.x3dv: 

2014-06-18  Holger Seelig  <holger.seelig@yahoo.de>

	* pb.x3dv: 

2014-06-18  Holger Seelig  <holger.seelig@yahoo.de>

	* pb.x3dv: 

2014-06-17  Holger Seelig  <holger.seelig@yahoo.de>

	* pb.x3dv: 

2014-06-17  Holger Seelig  <holger.seelig@yahoo.de>

	* pb.x3dv: 

2014-06-16  Holger Seelig  <holger.seelig@yahoo.de>

	* pb.x3dv: 

2014-06-16  Holger Seelig  <holger.seelig@yahoo.de>

	* pb.x3dv: 

2014-06-16  Holger Seelig  <holger.seelig@yahoo.de>

	* pb.x3dv: 

2014-06-16  Holger Seelig  <holger.seelig@yahoo.de>

	* pb.x3dv: 

2014-06-16  Holger Seelig  <holger.seelig@yahoo.de>

	* pb.x3dv: 

2014-06-16  Holger Seelig  <holger.seelig@yahoo.de>

	* pb.x3dv: 

2014-06-15  Holger Seelig  <holger.seelig@yahoo.de>

	* pb.x3dv: 

2014-06-15  Holger Seelig  <holger.seelig@yahoo.de>

	* Comments.x3dv:
	* pb.x3dv: 
