@@ -1274,71 +1274,6 @@ MaterialEditor::on_value_changed (X3D::SFFloat & backField,
 	}
 }
 
-void
-MaterialEditor::updateAppearance ()
-{
-//	if (changing)
-//		return;
-//
-//	// Update material
-//
-//	const auto lastUndoStep = getBrowserWindow () -> getLastUndoStep ();
-//
-//	if (undoStep and lastUndoStep == undoStep)
-//	{
-//		if (isTwoSidedMaterial)
-//		{
-//			for (const auto & appearance : appearances)
-//				appearance -> material () = twoSidedMaterial;
-//		}
-//		else
-//		{
-//			for (const auto & appearance : appearances)
-//				appearance -> material () = material;
-//		}
-//
-//		// Update materials
-//
-//		getBrowser () -> update ();
-//
-//		preview -> addEvent ();
-//	}
-//	else
-//	{
-//		undoStep = std::make_shared <UndoStep> (_ ("Material Change"));
-//
-//		undoStep -> addUndoFunction (&X3D::X3DBrowser::update, getBrowser ());
-//
-//		if (isTwoSidedMaterial)
-//		{
-//			twoSidedMaterial = twoSidedMaterial -> copy (twoSidedMaterial -> getExecutionContext ());
-//
-//			updatePreview ();
-//
-//			for (const auto & appearance : appearances)
-//				getBrowserWindow () -> replaceNode (X3D::SFNode (appearance), appearance -> material (), X3D::SFNode (twoSidedMaterial), undoStep);
-//		}
-//		else
-//		{
-//			material = material -> copy (material -> getExecutionContext ());
-//
-//			updatePreview ();
-//
-//			for (const auto & appearance : appearances)
-//				getBrowserWindow () -> replaceNode (X3D::SFNode (appearance), appearance -> material (), X3D::SFNode (material), undoStep);
-//		}
-//
-//		undoStep -> addRedoFunction (&X3D::X3DBrowser::update, getBrowser ());
-//
-//		getExecutionContext () -> realize ();
-//		getBrowser () -> update ();
-//
-//		getBrowserWindow () -> addUndoStep (undoStep);
-//
-//		preview -> addEvent ();
-//	}
-}
-
 // Helper functions
 
 Gdk::Color
