@@ -1,3 +1,8 @@
+2014-07-11  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* MaterialEditor.h:
+	* MaterialEditor.cpp: 
+
 2014-07-10  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* Dragon.svg:
