@@ -1,3 +1,9 @@
+2014-07-11  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* Traverse.h:
+	* Traverse.cpp:
+	* Selection.cpp: 
+
 2014-07-10  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* X3DPtr.h: 
